accessible/src/generic/Accessible.h
@@ -434,6 +434,11 @@ public:
   virtual bool CanHaveAnonChildren();
 
   /**
+   * Return true if the accessible is an acceptable child.
+   */
+  virtual bool IsAcceptableChild(Accessible* aPossibleChild) const { return true; }
+
+  /**
    * Returns text of accessible if accessible has text role otherwise empty
    * string.
    *
